--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
     defaults:
     
       run: 
-        working-directory: ./dev
+        working-directory: ./dev_vite
     steps:
       - name: clone repo
         uses: actions/checkout@v3
@@ -26,7 +26,7 @@ jobs:
            node-version: 16
       - name: install node dependencies 
         run: npm install
-      - name: run craco build
+      - name: run vite build
         run: npm run build
       - name: rename main.js to main.txt
         run:  mv ./build/static/js/main.js ./build/static/js/main.txt
