update branch for gh action trigger

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Build-depoly-Vite-react
 on: 
   push:
       branches:
-        - finch_vite
+        - main
   workflow_dispatch:
 jobs:
   Build-Vite: 
